// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonComponent test suite should have correct props and layout between loading states 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#E1E9EE",
        "borderRadius": 4,
        "height": 100,
        "marginBottom": 10,
        "overflow": "hidden",
        "width": 240,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "transform": Array [
              Object {
                "translateX": undefined,
              },
            ],
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        proxiedProperties={
          Object {
            "colors": Array [
              4292995566,
              4294113532,
              4292995566,
            ],
            "endPoint": Array [
              1,
              0,
            ],
            "locations": undefined,
            "startPoint": Array [
              0,
              0,
            ],
          }
        }
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#E1E9EE",
        "borderRadius": 4,
        "height": 40,
        "overflow": "hidden",
        "width": 180,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "transform": Array [
              Object {
                "translateX": undefined,
              },
            ],
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        proxiedProperties={
          Object {
            "colors": Array [
              4292995566,
              4294113532,
              4292995566,
            ],
            "endPoint": Array [
              1,
              0,
            ],
            "locations": undefined,
            "startPoint": Array [
              0,
              0,
            ],
          }
        }
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`SkeletonComponent test suite should have the correct layout when loading 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#E1E9EE",
        "borderRadius": 4,
        "height": 100,
        "marginBottom": 10,
        "overflow": "hidden",
        "width": 240,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "grey",
        "borderRadius": 20,
        "height": 40,
        "overflow": "hidden",
        "width": 180,
      }
    }
  />
</View>
`;

exports[`SkeletonComponent test suite should render empty alone 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;

exports[`SkeletonComponent test suite should render the correct bones for children 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": AnimatedValue {
          " __value": NaN,
        },
        "borderRadius": 4,
        "height": 100,
        "width": 200,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": AnimatedValue {
          " __value": NaN,
        },
        "borderRadius": 4,
        "height": 120,
        "width": 20,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": AnimatedValue {
          " __value": NaN,
        },
        "borderRadius": 4,
        "height": 80,
        "width": 240,
      }
    }
  />
</View>
`;

exports[`SkeletonComponent test suite should support nested layouts 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "height": 300,
        "width": 320,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#E1E9EE",
          "borderRadius": 4,
          "height": 120,
          "overflow": "hidden",
          "width": 200,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "height": "100%",
              "position": "absolute",
              "width": "100%",
            },
            Object {
              "transform": Array [
                Object {
                  "translateX": undefined,
                },
              ],
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoLinearGradient
          proxiedProperties={
            Object {
              "colors": Array [
                4292995566,
                4294113532,
                4292995566,
              ],
              "endPoint": Array [
                1,
                0,
              ],
              "locations": undefined,
              "startPoint": Array [
                0,
                0,
              ],
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#E1E9EE",
          "borderRadius": 4,
          "height": 100,
          "overflow": "hidden",
          "width": 180,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "height": "100%",
              "position": "absolute",
              "width": "100%",
            },
            Object {
              "transform": Array [
                Object {
                  "translateX": undefined,
                },
              ],
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoLinearGradient
          proxiedProperties={
            Object {
              "colors": Array [
                4292995566,
                4294113532,
                4292995566,
              ],
              "endPoint": Array [
                1,
                0,
              ],
              "locations": undefined,
              "startPoint": Array [
                0,
                0,
              ],
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "grey",
        "borderRadius": 20,
        "height": 40,
        "overflow": "hidden",
        "width": 180,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "transform": Array [
              Object {
                "translateX": undefined,
              },
            ],
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        proxiedProperties={
          Object {
            "colors": Array [
              4292995566,
              4294113532,
              4292995566,
            ],
            "endPoint": Array [
              1,
              0,
            ],
            "locations": undefined,
            "startPoint": Array [
              0,
              0,
            ],
          }
        }
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`SkeletonComponent test suite should support percentage for child size 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "height": 300,
      "width": 320,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "grey",
        "borderRadius": 20,
        "height": "50%",
        "overflow": "hidden",
        "width": "20%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "transform": Array [
              Object {
                "translateX": undefined,
              },
            ],
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        proxiedProperties={
          Object {
            "colors": Array [
              4292995566,
              4294113532,
              4292995566,
            ],
            "endPoint": Array [
              1,
              0,
            ],
            "locations": undefined,
            "startPoint": Array [
              0,
              0,
            ],
          }
        }
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#E1E9EE",
        "borderRadius": 10,
        "height": "10%",
        "overflow": "hidden",
        "width": "50%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "transform": Array [
              Object {
                "translateX": undefined,
              },
            ],
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        proxiedProperties={
          Object {
            "colors": Array [
              4292995566,
              4294113532,
              4292995566,
            ],
            "endPoint": Array [
              1,
              0,
            ],
            "locations": undefined,
            "startPoint": Array [
              0,
              0,
            ],
          }
        }
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
</View>
`;
